--- a/public/manifest.json
+++ b/public/manifest.json
@@ -27,6 +27,12 @@
             "purpose": "maskable"
         },
         {
+            "src": "/images/logo/cloud-144x144.png",
+            "sizes": "144x144",
+            "type": "image/png",
+            "purpose": "maskable"
+        },
+        {
             "src": "/images/logo/cloud-192x192.png",
             "sizes": "192x192",
             "type": "image/png",
